# beskid

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  noxfile.py  package.json  validate-ci-local.sh
src/beskid_tests/: Cargo.toml
src/beskid_tests/src/: lib.rs
src/beskid_tests/src/analysis/: resolve.rs  types.rs
src/beskid_tests/src/codegen/: diagnostics.rs  lowering.rs  unsupported.rs  util.rs
src/beskid_tests/src/parsing/: contracts.rs  functions.rs  modules.rs
src/beskid_tests/src/projects/: compile_plan.rs  discovery.rs  manifest.rs
src/beskid_tests/src/runtime/: guard.rs  jit.rs
src/beskid_tests/src/syntax/: expressions.rs  mod.rs  query.rs  types.rs
src/pecan_analysis/: Cargo.toml
src/pecan_analysis/src/: builtins.rs  lib.rs  pecan.pest  stdlib.rs
src/pecan_analysis/src/analysis/: mod.rs  rules.rs
src/pecan_analysis/src/analysis/rules/: resolve.rs  resolve_type.rs  staged.rs  types.rs
src/pecan_analysis/src/hir/: common.rs  expression.rs  item.rs  legality.rs  literal.rs  match_arm.rs  mod.rs  phase.rs  program.rs  range_expression.rs  statement.rs  types.rs
src/pecan_analysis/src/hir/lowering/: expressions.rs  items.rs  types.rs
src/pecan_analysis/src/hir/normalize/: core.rs  mod.rs
src/pecan_analysis/src/query/: mod.rs  query.rs  walker.rs
src/pecan_analysis/src/resolve/: errors.rs  ids.rs  items.rs  mod.rs  module_graph.rs  resolver.rs  tables.rs
src/pecan_analysis/src/syntax/: mod.rs
src/pecan_analysis/src/syntax/common/: identifier.rs  mod.rs  span.rs  visibility.rs
src/pecan_analysis/src/syntax/expressions/: assign_expression.rs  binary_expression.rs  block_expression.rs  call_expression.rs  enum_constructor_expression.rs  expression.rs  grouped_expression.rs  literal.rs  literal_expression.rs  match_arm.rs  match_expression.rs  member_expression.rs  mod.rs  path_expression.rs  pattern.rs  struct_literal_expression.rs  struct_literal_field.rs  unary_expression.rs
src/pecan_analysis/src/syntax/items/: contract_definition.rs  contract_embedding.rs  contract_method_signature.rs  contract_node.rs  enum_definition.rs  enum_variant.rs  function_definition.rs  inline_module.rs  method_definition.rs  mod.rs  module_declaration.rs  node.rs  parse_helpers.rs  program.rs  (+2 more)
src/pecan_analysis/src/types/: mod.rs  table.rs
src/pecan_cli/: Cargo.toml
src/pecan_cli/src/: cli.rs  errors.rs
src/pecan_cli/src/commands/: analyze.rs  clif.rs  mod.rs  parse.rs  run.rs  tree.rs
src/pecan_engine/: Cargo.toml
src/pecan_engine/src/: engine.rs  jit_module.rs  lib.rs
src/pecan_tests/: Cargo.toml
src/pecan_tests/src/: lib.rs
src/pecan_tests/src/analysis/: legality.rs  lowering.rs  mod.rs  resolve.rs  types.rs
src/pecan_tests/src/codegen/: descriptors.rs  diagnostics.rs  lowering.rs  unsupported.rs  util.rs
src/pecan_tests/src/parsing/: contracts.rs  control_flow.rs  enums.rs  expression_rules.rs  expressions.rs  functions.rs  item_rules.rs  lexical.rs  literals.rs  match_expr.rs  methods.rs  mod.rs  modules.rs  patterns.rs  statements.rs  string_rules.rs  struct_literals.rs  types.rs  util.rs
src/pecan_tests/src/runtime/: alloc.rs  guard.rs  jit.rs  mod.rs
src/pecan_tests/src/syntax/: expressions.rs  items.rs  query.rs  statements.rs  types.rs  util.rs
(+1348 files in other folders)
