[package]
name = "pekan_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
beskid_analysis = { path = "../beskid_analysis" }
beskid_codegen = { path = "../beskid_codegen" }
beskid_engine = { path = "../beskid_engine" }
beskid_runtime = { path = "../beskid_runtime" }
cranelift-codegen = "0.128.3"
cranelift-jit = "0.128.3"
cranelift-module = "0.128.3"
cranelift-native = "0.128.3"
pest = { workspace = true }
