[package]
name = "pecan_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
pest-ast = { workspace = true }
from-pest = { workspace = true }
pecan_ast_derive = { path = "../pecan_ast_derive" }
miette = { version = "7.1", features = ["fancy"] }
thiserror = "2.0"
