[package]
name = "pecan_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift-codegen = "0.128.3"
cranelift-jit = "0.128.3"
cranelift-module = "0.128.3"
cranelift-native = "0.128.3"
cranelift-object = "0.128.3"
gc-arena = { path = "../gc-arena" }
pecan_analysis = { path = "../pecan_analysis" }
pecan_codegen = { path = "../pecan_codegen" }
pecan_runtime = { path = "../pecan_runtime" }
